fix tweet issue on mobile

--- a/src/sass/partials/_days.scss
+++ b/src/sass/partials/_days.scss
@@ -17,7 +17,7 @@
     font-size: 16px;
 
     @include mq(tablet) {
-        font-size: 24px;
+        font-size: 20px;
     }
 }
 
