--- a/src/sass/partials/_related.scss
+++ b/src/sass/partials/_related.scss
@@ -29,7 +29,7 @@
     margin-bottom: 8px !important;
 
     @include mq(desktop) {
-        font-size: 24px;
+        font-size: 20px;
     }
 }
 
